tests/compile_fail/inc_dec_void_pointer/source.c
int main(void) {
    void *p;
    p++;
    return 0;
}
